--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -16,6 +16,21 @@ spring:
   sql:
     init:
       mode: always
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/notemax
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+keycloak:
+  realm: notemax
+  auth-server-url: http://localhost:8081
+  resource: notemax-client
+  credentials:
+    secret: k7LCecIUFVlbSagjIxAv1xOjt4RL3iI8
+  bearer-only: true
+  use-resource-role-mappings: true
 
 auth:
   jwt:
